--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ hs_err_pid*
 /last-news.iml
 /src/main/resources/application.properties
 /src/main/resources/config.properties
+/application.properties.variations
